samples/_failures_safe/1761660394_410ec4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_55aa7052.c: In function ‘main’:
./samples/SAFE/__tmp_55aa7052.c:138:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  138 |     size_t decomp
      |     ^~~~~~
./samples/SAFE/__tmp_55aa7052.c:138:5: error: expected declaration or statement at end of input
